final updates to chapter1

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" src="index.css">
 </head>
 
-<body>
+<body> 
 
-    <div id="root">Not rendered</div>
+    <div id="root">Not rendered root</div>
 
 
 
